fix resume on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,7 +94,7 @@ html body {
   overflow: scroll;
 }
 
-#resume iframe {
+#resume object {
   width: 100%;
   height: 100%;
 }
